# ChangeLog for games-fps/ut2004-data
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2004-data/ChangeLog,v 1.22 2008/07/28 16:55:16 wolf31o2 Exp $

  28 Jul 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
  Removing myself from metadata.xml since I am retiring from the project.

  12 Mar 2007; Marius Mauch <genone@gentoo.org> ut2004-data-3186-r3.ebuild:
  Replacing einfo with elog

  10 Nov 2006; Tristan Heaven <nyhm@gentoo.org> ut2004-data-3186-r3.ebuild:
  Fix bash 3.2 breakage

  24 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Moved cdrom_get_cds to src_unpack since binary packages don't require the
  original media to install.

  27 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Added games-fps/ut2004 to PDEPEND so it will get merged if someone does an
  'emerge ut2004-data'.

  24 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Closing bug #134192. Original patch provided by Paul Bredbury
  <brebs@sent.com> and edited by me for inclusion to maintain Games team
  coding standards.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Added patch to make the CD copying more flexible and closing bug #130102.

  14 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Added code to remove files provided by ut2004 and closing bug #129932.

  14 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Moved games_pkg_setup to the beginning of pkg_setup.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -ut2004-data-3186.ebuild:
  Removing older ebuilds so I don't mistakenly remove the wrong one again.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ut2004-data-3186-r3.ebuild:
  Marking stable on amd64 and x86 to keep users from having to downgrade to an
  older version of the ebuild.
