@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/ut2004-data
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2004-data/ChangeLog,v 1.22 2008/07/28 16:55:16 wolf31o2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2004-data/ChangeLog,v 1.23 2009/06/19 12:42:39 nyhm Exp $
+
+  19 Jun 2009; Tristan Heaven <nyhm@gentoo.org> ut2004-data-3186-r3.ebuild:
+  Don't install libsdl and openal, bug #264989
 
   28 Jul 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
   Removing myself from metadata.xml since I am retiring from the project.
